--- a/src/assets/css/carta.css
+++ b/src/assets/css/carta.css
@@ -1,37 +1,55 @@
-.section {
-    margin-bottom: 40px;
+@import url('./variables.css');
+
+.carta{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 20px;
+}
+.accordion-button{
+    background-color: var(--color-primary);
+    color: #000;
+    height: 40px;
+    border-radius: 20px 20px 20px 20px;
+    margin-top: 5px;
+}
 
-  .card {
-    background-color: #fff;
+.accordion-item{
+    background-color: var(--color-background);
+    border: none;
+}
+
+.accordion-body{
+    display: flex;
+    flex-direction: column;
+    gap: 2vw;
+    
+}
+
+.producto{
+    display: flex;
+    /* justify-content: space-between; */
+    gap: 2vw;
+    margin: 5px 0;
     border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    margin: 20px;
-    width: 300px;
-    padding: 20px;
-    text-align: center;
-  }
+    padding: 10px;
+    min-height: 10vw;
+    background-color: bisque;
+}
 
-  .card img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 5px;
-  }
+.producto__imagen{
+    width: 20vw;
+}
+.producto__imagen img{
+    width: 100%;
+    height: 100%;
+    max-height: 150px;
+    object-fit:scale-down;
+}
 
-  .card h3 {
-    margin-top: 10px;
-    margin-bottom: 5px;
-    color: #333;
-  }
-
-  .card p {
-    margin: 0;
-    color: #666;
-  }
-
-  .card p strong {
-    color: #333;
-  }
+.producto__info{
+    display: flex;
+    flex-direction: column;
+    gap: 1vw;
+    width: 100%;
+}
