--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -3,8 +3,8 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* background-color: black;
-  color: white; */
+  background-color: var(--color-background);
+  color: white; 
 }
 
 code {
