--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,13 +1,3 @@
-body {
-  font-family: 'Roboto', sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  background-color: var(--color-background);
-  color: white; 
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import url('./base.css');
+@import url('./cabecera.css');
+@import url('./App.css');
