Update creacion comandas y css

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,3 +1,5 @@
 @import url('./base.css');
 @import url('./cabecera.css');
+@import url('./carta.css');
+@import url('./mesas.css');
 @import url('./App.css');
