--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -8,6 +8,9 @@
     --color-text-secondary: #ffffff;
 
     --color-background: #1E1E1E;
+
+    --font-primary: 'Teachers', cursive;
+    --font-secondary: 'Archivo Black', sans-serif;
 }
 
 *{
@@ -22,7 +25,7 @@ html {
 }
 
 body {
-    font-family: 'Teachers', cursive;
+    font-family: var(--font-primary);
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -30,3 +33,8 @@ body {
     color: white; 
 }
   
+p{
+    font-family: 'Teachers', cursive;
+    font-size: 1rem;
+    margin: 0;
+}
