Fix editar productos y mas estilos

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -38,3 +38,69 @@ p{
     font-size: 1rem;
     margin: 0;
 }
+
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+input{
+    padding: 0.5rem;
+    border-radius: 5px;
+    border: none;
+}
+
+textarea{
+    padding: 0.5rem;
+    border-radius: 5px;
+    border: none;
+}
+
+.button1{
+    padding: 0.4rem;
+    border-radius: 5px;
+    border: none;
+    background-color: var(--color-primary);
+    color: var(--color-text-secondary);
+    font-family: 'Teachers', cursive;
+    cursor: pointer;
+}
+
+.button1:hover{
+    transition: 0.5s;
+    background-color: var(--color-secondary);
+    color: var(--color-text);
+}
+
+.form-edit-producto {
+    background-color: var(--color-background);
+    color: var(--color-text-secondary);
+    padding: 10px;
+    border-radius: 10px;
+    width: 100%;
+  }
+  
+  /* Estilo para las etiquetas */
+  .form-edit-producto label {
+    width: 100%;
+  }
+  
+  .form-edit-producto input[type="text"],input[type="number"],input[type="file"],
+  .form-edit-producto textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+
+  }
+  
+    .form-edit-producto input[type="text"]:focus,
+    .form-edit-producto input[type="number"]:focus,
+    .form-edit-producto textarea:focus {
+    border: 1px solid var(--color-primary);
+    }
+
+  .form-edit-producto textarea {
+    resize: vertical;
+  }
