--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -93,3 +93,40 @@
 }
 
 
+.contact-section {
+   text-align: center;
+   padding: 50px 0;
+}
+
+.contact-info {
+   margin-bottom: 20px;
+}
+
+.map-container {
+   display: flex;
+   justify-content: center;
+}
+
+.footer {
+   background-color: #333;
+   color: #fff;
+   text-align: center;
+   padding: 20px 0;
+}
+
+.footer a {
+   color: #fff;
+   margin: 0 10px;
+   text-decoration: none;
+}
+
+.footer a:hover {
+   text-decoration: underline;
+}
+
+
+#map {
+   height: 400px;
+   width: 100%;
+   margin-top: 20px;
+}
