--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,5 +1,7 @@
+@import "~leaflet/dist/leaflet.css";
 @import url('./base.css');
 @import url('./cabecera.css');
 @import url('./carta.css');
 @import url('./mesas.css');
+@import url('./comanda.css');
 @import url('./App.css');
