Restaurar contraseña, verificar cuenta email y gestionar mesas
fix errores y diseño

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -3,7 +3,7 @@
 :root {
     --color-primary: #AD6903;
     --color-secondary: #cf9f58;
-    --color-tertiary: #F2EFE4;
+    --color-tertiary: #f7edca;
     --color-text: #000;
     --color-text-secondary: #ffffff;
 
