--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -1,5 +1,5 @@
 .App-header {
-   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, #1E1E1E 95%), url(../img/restaurant1.jpg);
+   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, #1E1E1E 95%), url(../img/restaurant1.webp);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
@@ -71,7 +71,7 @@
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
-   font-size: 24px;
+   font-size: 40px;
    background: none;
    border: none;
    cursor: pointer;
@@ -79,6 +79,7 @@
  
 .prev {
    left: 10px;
+   
    color: white;
 }
  
@@ -152,6 +153,8 @@
    width: 50%;
    max-width: 750px;
    margin-top: 20px;
+   margin-right: 20px;
+   margin-left: 20px;
 }
 
 @media screen and (max-width: 768px) {
