--- a/src/assets/css/carta.css
+++ b/src/assets/css/carta.css
@@ -42,18 +42,11 @@
     border-radius: 10px;
     padding: 10px;
     min-height: 10vw;
-    background-color: bisque;
-}
-
-@media screen and (max-width: 500px) {
-    .producto{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 2vw;
-    }
+    background-color: var(--color-tertiary);
     
 }
+
+
 
 .producto__imagen{
     width: 20vw;
@@ -63,7 +56,7 @@
     width: 100%;
     height: 100%;
     max-height: 150px;
-    object-fit:scale-down;
+    object-fit: scale-down;
 }
 
 .producto__info{
@@ -72,6 +65,21 @@
     gap: 1vw;
     max-width: 350px;
     width: 100%;
+}
+
+@media screen and (max-width: 500px) {
+    .producto{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 2vw;
+    }
+
+    .producto__imagen{
+        min-width: 100px;
+        width: 100%;
+    }
+    
 }
 
 .btns-crear{
