--- a/src/assets/css/mesas.css
+++ b/src/assets/css/mesas.css
@@ -2,7 +2,8 @@
     width: 95%;
     margin: 0 auto;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
     gap: 2vw;   
 }
 
@@ -13,8 +14,7 @@
     margin: 5px 0;
     border-radius: 10px;
     padding: 10px;
-    min-height: 10vw;
-    background-color: bisque;
+    background-color: var(--color-tertiary);
 }
 
 @media screen and (max-width: 500px) {
@@ -29,4 +29,18 @@
 .primary{
     background-color: var(--color-primary);
     color: var(--color-text-secondary);
+}
+
+.btn-acciones-mesas{
+    display: flex;
+    gap: 2vw;
+    flex-wrap: wrap;
+}
+
+.btn-acciones-mesas button{
+    width: 70px;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
 }
