--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -103,3 +103,17 @@ textarea{
   .form-edit-producto textarea {
     resize: vertical;
   }
+
+  .form-registro{
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  @media screen and (max-width: 768px) {
+    .form-registro {
+      width: 100%;
+    }
+    
+  }
