--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -56,10 +56,15 @@
    justify-content: center;
    align-items: center;
 }
+.slide2-img{
+   border-radius: 20px;
+   overflow: hidden;
+}
 .slide2-img:hover{
    cursor: pointer;
-   transition: all 0.25s ease-in-out;
-   scale: 0.85;
+   transition: 0.5s linear all;
+   box-shadow: 10px 10px 14px 2px rgba(0,0,0,0.47);
+   scale: 0.95;
 }
 .slide2 img {
    max-width: 80%;
@@ -176,14 +181,17 @@
  
  
  
-.card {
+.card-home{
    overflow: visible;
    width: 250px;
    height: 314px;
  }
-
+.card-home:hover{
+   animation: floating 2s infinite;
+   cursor: pointer;
+ }
  @media screen and (max-width: 768px) {
-   .card {
+   .card-home {
       width: 200px;
       height: 250px;
    }
@@ -243,7 +251,7 @@
    gap: 30px;
  }
  
- .card:hover .content {
+ .card-home:hover .content {
    transform: rotateY(180deg);
  }
  
@@ -314,7 +322,7 @@
    object-position: center;
  }
  
- .card .img img{
+ .card-home .img img{
    width: 100%;
    height: 100%;
    object-fit: cover;
