--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,7 +1,6 @@
-@import "~leaflet/dist/leaflet.css";
+@import "~leaflet/dist/leaflet.css"; /* Leaflet CSS MAPA*/
 @import url('./base.css');
 @import url('./cabecera.css');
 @import url('./carta.css');
 @import url('./mesas.css');
 @import url('./comanda.css');
-@import url('./App.css');
